fixed buttons on mobile

--- a/NewStyle.css
+++ b/NewStyle.css
@@ -187,6 +187,7 @@ body, .playButton {
     background-size: 1.3%, 2.9%, 3.7%, 5.3%;
     padding: 2% 4% 2% 4%;
 
+    z-index: 3;
 }
 
 .playButton:hover{
